Opened 16 years ago

Closed 16 years ago

#4168 closed bug (fixed)

BDirectWindow exclusive fullscreen mode does not seem to work in VESA mode.

Reported by: bga Owned by: jackburton
Priority: normal Milestone: R1
Component: Kits/Game Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

The attached code demonstrates this. This is the Stars Be Sample Code. It creates its own window that derives from BDirectWindow and adds a shortcut so ALT+F was supposed to switch it to full screen mode.

Funny enough, it starts in window mode and works without problems (according to Steffano it was not supposed to), but although pressing ALT+F does call SetFullScreen() and the BDirectWindow thinks that it is in fullscreen mode now (IsFullScreen() returns true), the Window does not visually change to fullscreen mode.

Attachments (1)

Stars.zip (14.1 KB ) - added by bga 16 years ago.
Stars Be Sample Code

Download all attachments as: .zip

Change History (5)

by bga, 16 years ago

Attachment: Stars.zip added

Stars Be Sample Code

comment:1 by bga, 16 years ago

BTW, although I mention VESA, that's just the driver in use here. I have no idea if it works with other drivers as expected or not.

comment:2 by jackburton, 16 years ago

Owner: changed from marcusoverhagen to jackburton

comment:3 by jackburton, 16 years ago

We also have that code in the tree (although it's stripped down). I'll use it to find the problem.

comment:4 by jackburton, 16 years ago

Resolution: fixed
Status: newclosed

Should work since hrev32062.

Note: See TracTickets for help on using tickets.