Completed the server part of BDirectWindow::SetFullScreen(). The window is now resized and moved correctly. Moved this functionality to its own method. Should fix bug #4168.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32062 a95241bf-73f2-0310-859d-f6bbb57e9c96